Added monorepo examples

--- a/.github/workflows/main-branch.yaml
+++ b/.github/workflows/main-branch.yaml
@@ -45,6 +45,7 @@ jobs:
       tag: ${{ toJson(fromJson(steps.current.outputs.result).tag) }}
 
   test:
+    name: test/integration
     runs-on: ubuntu-latest
     needs: [ci-outputs]
     steps:
