--- a/.github/workflows/main-branch.yaml
+++ b/.github/workflows/main-branch.yaml
@@ -71,7 +71,7 @@ jobs:
 
   cd:
     uses: cloudposse/github-actions-workflows/.github/workflows/cd-ecs.yml@main
-    needs: [ ci-outputs, test ]
+    needs: [ monorepo, ci-outputs, test ]
     if: ${{ needs.monorepo.outputs.apps != '[]' }}
     strategy:
       matrix:
